# ChangeLog for dev-libs/glib
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.407 2010/05/11 19:46:05 ranger Exp $

  11 May 2010; Brent Baude <ranger@gentoo.org> glib-2.22.4.ebuild:
  Marking glib-2.22.4 ppc64 for bug 304777

  07 May 2010; Jeroen Roovers <jer@gentoo.org> glib-2.22.5.ebuild:
  Stable for HPPA (bug #304777).

  03 May 2010; Olivier Crête <tester@gentoo.org> glib-2.22.5.ebuild:
  amd64 stable, bug #314899

*glib-2.22.5 (26 Mar 2010)

  26 Mar 2010; Pacho Ramos <pacho@gentoo.org> +glib-2.22.5.ebuild:
  Version bump with bugfixes

  24 Mar 2010; Raúl Porcel <armin76@gentoo.org> glib-2.22.4.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #304777

  15 Mar 2010; nixnut <nixnut@gentoo.org> glib-2.22.4.ebuild:
  ppc stable #304777

  06 Mar 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> glib-2.22.4.ebuild:
  x86 stable wrt bug #304777

  06 Mar 2010; Samuli Suominen <ssuominen@gentoo.org> glib-2.22.4.ebuild:
  amd64 stable wrt #304777

*glib-2.22.4 (28 Jan 2010)

  28 Jan 2010; Gilles Dartiguelongue <eva@gentoo.org> -glib-2.20.5.ebuild,
  +glib-2.22.4.ebuild:
  Version bump. Bug fixes, and notably bug #297483. Disable test affecting
  live filesystem, bug #297684.

  19 Jan 2010; Raúl Porcel <armin76@gentoo.org> glib-2.22.2.ebuild:
  arm stable

*glib-2.22.3 (18 Dec 2009)

  18 Dec 2009; Romain Perier <mrpouet@gentoo.org> +glib-2.22.3.ebuild:
  Version bump

  10 Dec 2009; Raúl Porcel <armin76@gentoo.org> glib-2.22.2.ebuild:
  sparc stable

  17 Nov 2009; Brent Baude <ranger@gentoo.org> glib-2.20.5-r1.ebuild:
  Marking glib-2.20.5-r1 ppc64 for bug 286102

  10 Nov 2009; Raúl Porcel <armin76@gentoo.org> glib-2.20.5-r1.ebuild:
  ia64/m68k/s390/sh stable wrt #286102

  09 Nov 2009; Tiago Cunha <tcunha@gentoo.org> glib-2.20.5-r1.ebuild:
  stable sparc, security bug 286102

  09 Nov 2009; Markus Meier <maekke@gentoo.org> glib-2.20.5-r1.ebuild: