@@ -31,14 +31,14 @@ DIST glib-1.2.10-r1-as-needed.patch.bz2 9099 RMD160 5b7a21da6dc10112409bd885501a
 DIST glib-1.2.10.tar.gz 421480 RMD160 f19efe8c87ebeea979a4d36902d8a8209640cd95 SHA1 e5a9361c594608d152d5d9650154c2e3260b87fa SHA256 6e1ce7eedae713b11db82f11434d455d8a1379f783a79812cd2e05fc024a8d9f
 DIST glib-2.20.5.tar.bz2 5037738 RMD160 c71ccaaf0a196e21e144041ec3286db18a03a960 SHA1 19e2b2684d7bc35a73ff94eb7fd15fc70cc6f292 SHA256 88f092769df5ce9f784c1068a3055ede00ada503317653984101d5393de63655
 DIST glib-2.22.2.tar.bz2 5490926 RMD160 77227f8feb61c88f9f7fcff586a59ec38114a73d SHA1 bdd9c4b930e81203ea69fe83876cb6c82bdc5a38 SHA256 a4a41d02fc2d3f5effa1fc3466918e0b3ab60e9eb0a08139b997f2649cbacca3
-DIST glib-2.22.3.tar.bz2 5009176 RMD160 53e1707547612e592bd2a3b5f7dfc7be1c09ed5c SHA1 185d5b80adef96019daf7402cc6762cc4d37470d SHA256 edf1a42cfefc13dbb2c0973188a45e02908d6fe31e769306b190d15ace6c8b8a
 DIST glib-2.22.4.tar.bz2 5012207 RMD160 66dc6ec0f1b1d422f50f6d55700bee8d526318cc SHA1 be135a25c233a199f043161777d31ac30e42f435 SHA256 0d1f6bf8aaeab772f2370229eefda45bef434e3f29a7d1d8e5dfafeaa1d8ad14
 DIST glib-2.22.5.tar.bz2 4988402 RMD160 2e2f06f956f63a75121b335e4150edc44f5e04f2 SHA1 a35acb06c3155937651aaffc1f1895c6e19a91a4 SHA256 802be9c9ffeb631725ffd6ed35af0af309776729a7fab4fcb48f2b0b8fe7245b
+DIST glib-2.24.1.tar.bz2 5332511 RMD160 c6ce09654c1bd28b8844435d150fcb51e6f4e872 SHA1 d4835bb1618fc1e1dfe88ef8443c12fcae69f90e SHA256 014c3da960bf17117371075c16495f05f36501db990851ceea658f15d2ea6d04
 EBUILD glib-1.2.10-r5.ebuild 1760 RMD160 0fb063af5bd480117c457cc2414b2fe4860d69af SHA1 520a0ade993bc80f188702ef8c04ab52282064fb SHA256 99c57dbca1acca07e81d9f8566c54fbf92b389b2e860774467ce8bdfb847556f
 EBUILD glib-2.20.5-r1.ebuild 4306 RMD160 ad8854e69f6734587c98558270849d2c4ba0c14f SHA1 18ad8c5a9779dad42007f7600f018f4ff51710a7 SHA256 3a012911f41ae984aba517c72d907ae212dc6ce83e329aa6010f0c41946097d8
 EBUILD glib-2.22.2.ebuild 4413 RMD160 e5f377953a5a30a08819b76dd8485b320ce8b217 SHA1 8d6775610900b069ddffc68a5108346f8ddaba30 SHA256 1fcb89f64c119d602febe5c60e922480ca7065aef405f427b195d27958e1777a
-EBUILD glib-2.22.3.ebuild 5121 RMD160 997bf86511916220788ecf027d04f06d5e67ffea SHA1 a8b95bc41575a8bd0e1fc0af82c3e719afb1930a SHA256 b289c09900ee0438be7155976be65effc5b6fdc57993956c81a8a791ee9523bb
 EBUILD glib-2.22.4.ebuild 5368 RMD160 02838c99abf522db2c5743754d694e10b8b18c47 SHA1 605097159a4b3f160116eb52457eeafa9e30c587 SHA256 24e749f61d12b1fbba00cc2c7d2391e67f469ce2eec992e09736b0624913582e
-EBUILD glib-2.22.5.ebuild 5365 RMD160 af9cc7b6c407fdd62f727d3d703b26b3a9eb8b7e SHA1 e4af103454ffdc813005701e521bc097ff702d83 SHA256 810d2fb30708c130818c05183ab6db70cca6620708de3b0631348bcc0a1b85f9
-MISC ChangeLog 50138 RMD160 fa040e773b9548d2c66d4be8a779de6b46e89ec5 SHA1 49aa4f44804c5ce222788af2f0cc08fbd877d341 SHA256 c81349e918f77886b54d5ff9f3ad7d6d6f94caab9f4741023a8db6ff0656643e
+EBUILD glib-2.22.5.ebuild 5368 RMD160 68786c31b9de08e455a056b9ad6516b3b1c86231 SHA1 579c08ac9ea57b124f81766af42af2879c080bd4 SHA256 8217840389f0901f71fde5853e980585bb8a87337062842d54c0d92c65fb2bba
+EBUILD glib-2.24.1.ebuild 5367 RMD160 882f2b6aae07cf5e5068300f1e3ed880f0263124 SHA1 04616c5874d238979df0d2676470c954e613d378 SHA256 9bb7094913d73308803e1b6a74945021ff8925d3a245e232955593575e4e799b
+MISC ChangeLog 50412 RMD160 33e034b2735bd10cd266285008ecd634c95b6cea SHA1 333119cac424846d2935c62de062f3e97efbd6e8 SHA256 e7efa792c3bdf59ec17c2b36d2a87e1903ec4759fb54b1f7c749d22c54b4ef0c
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
